--- a/.github/workflows/spora_prog.yml
+++ b/.github/workflows/spora_prog.yml
@@ -20,72 +20,72 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  ERC:
-    runs-on: ubuntu-latest
-    container: ghcr.io/inti-cmnb/kicad5_auto:latest
+  # ERC:
+  #   runs-on: ubuntu-latest
+  #   container: ghcr.io/inti-cmnb/kicad8_auto:latest
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Run ERC
-      run: |
-        make -C pcb_prog erc
+  #   - name: Run ERC
+  #     run: |
+  #       make -C pcb_prog erc
 
-    - name: Retrieve results
-      uses: actions/upload-artifact@v3
-      with:
-        name: ERC_Output
-        path: pcb_prog/Fabrication
+  #   - name: Retrieve results
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: ERC_Output
+  #       path: pcb_prog/Fabrication
 
-  DRC:
-    runs-on: ubuntu-latest
-    container: ghcr.io/inti-cmnb/kicad5_auto:latest
-    needs: ERC
+  # DRC:
+  #   runs-on: ubuntu-latest
+  #   container: ghcr.io/inti-cmnb/kicad8_auto:latest
+  #   needs: ERC
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Run DRC
-      run: |
-        make -C pcb_prog drc
+  #   - name: Run DRC
+  #     run: |
+  #       make -C pcb_prog drc
 
-    - name: Retrieve results
-      uses: actions/upload-artifact@v3
-      with:
-        name: DRC_Output
-        path: pcb_prog/Fabrication
+  #   - name: Retrieve results
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: DRC_Output
+  #       path: pcb_prog/Fabrication
 
-  FabSch:
-    name: Schematic fabrication files
-    runs-on: ubuntu-latest
-    container: ghcr.io/inti-cmnb/kicad5_auto:latest
-    needs: ERC
+  # FabSch:
+  #   name: Schematic fabrication files
+  #   runs-on: ubuntu-latest
+  #   container: ghcr.io/inti-cmnb/kicad8_auto:latest
+  #   needs: ERC
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v4
 
-    - name: Run schematic stuff
-      run: |
-        make -C pcb_prog sch_fab
+  #   - name: Run schematic stuff
+  #     run: |
+  #       make -C pcb_prog sch_fab
 
-    - name: Retrieve results
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: FabSch_Output
-        path: |
-          pcb_prog/Fabrication/
-          pcb_prog/kibot_error.log
-        if-no-files-found: warn
+  #   - name: Retrieve results
+  #     if: ${{ always() }}
+  #     uses: actions/upload-artifact@v4
+  #     with:
+  #       name: FabSch_Output
+  #       path: |
+  #         pcb_prog/Fabrication/
+  #         pcb_prog/kibot_error.log
+  #       if-no-files-found: warn
 
   FabPCB:
     name: PCB fabrication files
     runs-on: ubuntu-latest
-    container: ghcr.io/inti-cmnb/kicad5_auto:latest
-    needs: DRC
+    container: ghcr.io/inti-cmnb/kicad8_auto:latest
+    # needs: DRC
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Run PCB stuff
       run: |
@@ -93,7 +93,7 @@ jobs:
 
     - name: Retrieve results
       if: ${{ always() }}
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: FabPCB_Output
         path: |
